src/styles/home.scss
:root {
  --ease: cubic-bezier(0.165, 0.84, 0.44, 1);
}
#app {
  background: white;
  min-height: 100vh;
}
section {
  //min-height: 100vh;
  //display: flex;
  //justify-content: center;
  //align-items: center;
}

::-webkit-scrollbar {
  display: none;
}

#menu-icon {
  position: absolute;
  top: 40px;
  right: 70px;
  z-index: 4;
  path {
    transition: all 0.3s ease;
  }
  @media screen and (max-width: 768px) {
    top: 20px;
    right: 20px;
    transform: scale(0.7);
  }
}
#menu {
  width: 100%;
  height: 100vh;
  position: absolute;
  z-index: 3;
  background: #e1e1e1;
  clip-path: circle(0% at calc(100% - 45px) 45px);
  display: flex;
  align-items: center;
  .menu-wrapper {
    width: 100%;
    // height: max-content;
    display: flex;
    flex-direction: column;
    justify-content: center;
    .menu-item {
      padding: 0 25px;
      font-size: 72px;
      border-bottom: 2px solid #1d3557;
      color: #e63946;
      cursor: pointer;
      position: relative;
      &::before {
        content: "";
        width: 100%;
        height: 100%;
        position: absolute;
        top: 0;
        left: 0;
        background-color: #ffffff;
        mix-blend-mode: exclusion;
        will-change: clip-path;
        clip-path: inset(50% 0 50% 0);
        transition:
          clip-path 0.4s var(--ease),
          -webkit-clip-path 0.4s var(--ease);
      }
      &.hover::before {
        clip-path: inset(0% 0 0% 0);
      }
      @media screen and (max-width: 768px) {
        font-size: 48px;
      }
    }
  }
}
#mouse {
  position: absolute;
  width: 20px;
  height: 20px;
  inset: 50%;
  background-color: #f5f5f5ff;
  border-radius: 50%;
  z-index: 1000;
  user-select: none;
  pointer-events: none;
  mix-blend-mode: exclusion;
  transition: transform 0.3s ease;
  will-change: transform;
}
#mouse-canvas {
  z-index: 100;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  pointer-events: none;
}

.subpage-header {
  width: 100%;
  padding-top: 80px;
  display: flex;
  flex-direction: column;
  .upper {
    display: flex;
    width: 100%;
    border-bottom: 1px solid rgba(0, 0, 0, 0.4);
    font-size: 24px;
    margin-bottom: 5px;
  }
  .lower {
    font-size: 18px;
  }
  @media screen and (max-width: 768px) {
    padding-top: 40px;
    .upper {
      font-size: 18px;
    }
    .lower {
      font-size: 14px;
    }
  }
}

#main {
  background-color: #111e2d;
  height: 100vh;
  display: flex;
  align-items: center;
  justify-content: center;
  .title {
    color: white;
    padding: 20px;
    h1 {
      font-size: 50px;
      line-height: 40px;
      cursor: default;
    }
    h2 {
      font-size: 20px;
      cursor: default;
    }
    h1,
    h2 {
      // display: flex;
      span {
        // display: inline-block;
        position: relative;
      }
    }
  }
  .scroll {
    position: absolute;
    width: 40px;
    bottom: 30px;
    opacity: 0;
  }
}
#about {
  height: calc(100vh - 200px);
  overflow: hidden;
  .col-wrapper {
    display: flex;
    width: 100%;
    height: 100%;
    overflow-y: scroll;
    @media screen and (max-width: 768px) {
      flex-direction: column;
    }
    .text-wrapper {
      .block-wrapper {
        height: calc(100vh - 215px);
        display: flex;
        flex-direction: column;
        justify-content: center;
      }
    }
    .canvas-wrapper {
      canvas {
        position: fixed;
        pointer-events: none;
        user-select: none;
        @media screen and (max-width: 768px) {
          display: none;
        }
      }
    }
  }
}
#projects {
  .projects-table {
    .projects-table__title,
    .projects-table__content {
      border-bottom: 1px solid #e9e9e7;
      display: flex;
      justify-content: space-between;
      > span {
        flex: 200px;
        &:nth-child(3) {
          flex: 250px;
        }
        a {
          text-decoration: underline #e8e8e8;
        }
      }
    }
    .projects-table__title {
      padding: 10px 0 10px 25px;
      span {
        padding-left: 10px;
        color: #7d7c78;
        font-size: 18px;
        svg {
          width: 18px;
          height: 100%;
        }
      }
    }
    .projects-table__content-wrapper {
      display: flex;
      flex-direction: column;
      .projects-table__content {
        padding-left: 25px;
        > span {
          padding: 10px;
          margin-right: 10px;
          line-break: anywhere;
          color: #37352f;
          font-weight: 300;
          font-size: 16px;
          &:not(:last-child) {
            border-right: 1px solid #e9e9e7;
          }
        }
        .projects-table__content__title {
          font-weight: 500;
          text-decoration: underline #bebebe;
          font-size: 18px; // may change later
          cursor: pointer; // well open subpage or model later
        }
        .projects-table__content__tags {
          display: flex;
          gap: 10px;
          flex-wrap: wrap;
          align-items: flex-start;
          .tag {
            padding: 5px 10px;
            border-radius: 5px;
            font-size: 12px;
            background-color: #fdecc8;
            color: #32302c;
            cursor: default;
          }
        }
      }
    }

    @media screen and (max-width: 768px) {
      display: flex;
      justify-content: center;
      .projects-table__title {
        flex-direction: column;
        height: max-content;
        padding: 0;
        border-right: 1px solid #e9e9e7;
        border-bottom: 0;
        span {
          flex: unset !important;
          padding: 10px 20px 10px 0;
          height: 50px;
          &:not(:last-child) {
            border-bottom: 1px solid #e9e9e7;
          }
        }
      }
      .projects-table__content-wrapper {
        display: block;
        overflow: scroll;
        height: 200px;
        .projects-table__content {
          flex-direction: column;
          padding-left: 0;
          border-bottom: 0;
          > span {
            border-right: 0 !important;
            padding: 10px 0 10px 20px;
            flex: unset !important;
            margin-right: 0 !important;
            height: 50px;
            &:not(:last-child) {
              border-bottom: 1px solid #e9e9e7;
            }
          }
        }
      }
    }
  }
}

